--- a/my-money-app/frontend/public/index.html
+++ b/my-money-app/frontend/public/index.html
@@ -7,8 +7,8 @@
 	<title>My money App</title>
 	<link rel="stylesheet" href="app.css">
 </head>
-<body class="skin-blue fixed sidebar-mini">
-	<section id="app"></section>
+<body class="skin-blue sidebar-mini">
+	<section id="app" class="wrapper"></section>
 	<script src="app.js" type="text/javascript"></script>
 </body>
 </html> 
